[package]
name = "module-perpetualasset"
description = 'FRAME pallet for pricing perpetual assets.'
version = "0.1.1"
authors = ["Georges Dib <georges.dib@gmail.com>"]
edition = "2018"
readme = 'README.md'
homepage = 'https://substrate.dev' # Amend that to have my home page
license = 'Unlicense' # Amend that with the right license
repository = 'https://github.com/georgesdib/perpetuals/'

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "575518d", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "575518d", default-features = false }
support = { package = "module-support", git = "https://github.com/AcalaNetwork/Acala", default-features = false }
primitives = { package = "acala-primitives", git = "https://github.com/AcalaNetwork/Acala", default-features = false }
module-prices = { package = "module-prices", git = "https://github.com/AcalaNetwork/Acala", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
	"module-prices/std",
	"orml-traits/std",
	"orml-tokens/std",
]
